--- a/src/main/webapp/demos/image_cars/index2.html
+++ b/src/main/webapp/demos/image_cars/index2.html
@@ -4,11 +4,11 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge"> 
 		<meta name="viewport" content="width=device-width, initial-scale=1"> 
-		<link rel="stylesheet" type="text/css" href="css/normalize.css" />
-		<link rel="stylesheet" type="text/css" href="css/demo.css" />
-		<link rel="stylesheet" type="text/css" href="css/component.css" />
-		<link rel="stylesheet" type="text/css" href="css/fxfullwidth.css" />
-		<script src="js/modernizr.custom.js"></script>
+		<link rel="stylesheet" type="text/css" href="../../statics/css/image_carousel/normalize.css" />
+		<link rel="stylesheet" type="text/css" href="../../statics/css/image_carousel/demo.css" />
+		<link rel="stylesheet" type="text/css" href="../../statics/css/image_carousel/component.css" />
+		<link rel="stylesheet" type="text/css" href="../../statics/css/image_carousel/fxfullwidth.css" />
+		<script src="../../statics/plugins/image_cars/modernizr.custom.js"></script>
 	</head>
 	<body>
 		<div class="container demo-2">
@@ -42,9 +42,9 @@
 			<section>
 				<div id="component" class="component component-fullwidth">
 					<ul class="itemwrap">
-						<li class="current"><img src="img/6.jpg" alt="img06"/></li>
-						<li><img src="img/7.jpg" alt="img07"/></li>
-						<li><img src="img/8.jpg" alt="img08"/></li>
+						<li class="current"><img src="../../statics/img/im_cars/6.jpg" alt="img06"/></li>
+						<li><img src="../../statics/img/im_cars/7.jpg" alt="img07"/></li>
+						<li><img src="../../statics/img/im_cars/8.jpg" alt="img08"/></li>
 					</ul>
 					<nav>
 						<a class="prev" href="#">Previous item</a>
@@ -57,7 +57,7 @@
 
 			</section>
 		</div><!-- /container -->
-		<script src="js/classie.js"></script>
-		<script src="js/main.js"></script>
+		<script src="../../statics/plugins/image_cars/classie.js"></script>
+		<script src="../../statics/plugins/image_cars/main.js"></script>
 	</body>
 </html>
