--- a/src/main/webapp/demos/image_cars/index3.html
+++ b/src/main/webapp/demos/image_cars/index3.html
@@ -4,11 +4,11 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge"> 
 		<meta name="viewport" content="width=device-width, initial-scale=1"> 
-		<link rel="stylesheet" type="text/css" href="css/normalize.css" />
-		<link rel="stylesheet" type="text/css" href="css/demo.css" />
-		<link rel="stylesheet" type="text/css" href="css/component.css" />
-		<link rel="stylesheet" type="text/css" href="css/fxtransparent.css" />
-		<script src="js/modernizr.custom.js"></script>
+		<link rel="stylesheet" type="text/css" href="../../statics/css/image_carousel/normalize.css" />
+		<link rel="stylesheet" type="text/css" href="../../statics/css/image_carousel/demo.css" />
+		<link rel="stylesheet" type="text/css" href="../../statics/css/image_carousel/component.css" />
+		<link rel="stylesheet" type="text/css" href="../../statics/css/image_carousel/fxtransparent.css" />
+		<script src="../../statics/plugins/image_cars/modernizr.custom.js"></script>
 	</head>
 	<body>
 		<div class="container">
@@ -32,10 +32,10 @@
 				</div>
 				<div id="component" class="component component-transparent">
 					<ul class="itemwrap">
-						<li class="current"><img src="img/9.png" alt="img09"/></li>
-						<li><img src="img/10.png" alt="img10"/></li>
-						<li><img src="img/11.png" alt="img11"/></li>
-						<li><img src="img/12.png" alt="img12"/></li>
+						<li class="current"><img src="../../statics/img/im_cars/9.png" alt="img09"/></li>
+						<li><img src="../../statics/img/im_cars/10.png" alt="img10"/></li>
+						<li><img src="../../statics/img/im_cars/11.png" alt="img11"/></li>
+						<li><img src="../../statics/img/im_cars/12.png" alt="img12"/></li>
 					</ul>
 					<nav>
 						<a class="prev" href="#">Previous item</a>
@@ -44,7 +44,7 @@
 				</div>
 			</section>
 		</div><!-- /container -->
-		<script src="js/classie.js"></script>
-		<script src="js/main.js"></script>
+		<script src="../../statics/plugins/image_cars/classie.js"></script>
+		<script src="../../statics/plugins/image_cars/main.js"></script>
 	</body>
 </html>
