--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -21,7 +21,7 @@
   <![endif]-->
 </head>
 <!-- ADD THE CLASS layout-boxed TO GET A BOXED LAYOUT -->
-<body class="hold-transition skin-blue sidebar-mini">
+<body class="hold-transition skin-blue sidebar-mini" style="overflow:-Scroll;overflow-y:hidden" >
 <!-- Site wrapper -->
 <div class="wrapper" id="rrapp" v-cloak>
   <header class="main-header">
@@ -78,7 +78,7 @@
 
     <!-- Main content -->
     <section class="content" style="background:#fff;">
-      <iframe scrolling="yes" frameborder="0" style="width:100%;min-height:200px;overflow:visible;background:#fff;" :src="main"></iframe>
+      <iframe scrolling="yes" frameborder="0" style="width:100%;height:100%;overflow:visible;background:#fff;" :src="main"></iframe>
     </section>
     <!-- /.content -->
   </div>
